WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236838
REGRESSION (
r287524
): hihello.me does not show sliding sheet at the bottom of the page
https://bugs.webkit.org/show_bug.cgi?id=236838
Summary
REGRESSION (r287524): hihello.me does not show sliding sheet at the bottom of...
Antoine Quint
Reported
2022-02-18 07:03:24 PST
REGRESSION (
r287524
): hihello.me does not show sliding sheet at the bottom of the page
Attachments
Patch
(25.34 KB, patch)
2022-02-18 07:27 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-02-18 07:06:42 PST
This was caused by
bug 234799
.
Antoine Quint
Comment 2
2022-02-18 07:27:25 PST
Created
attachment 452518
[details]
Patch
Antoine Quint
Comment 3
2022-02-18 07:27:32 PST
<
rdar://problem/88672183
>
EWS Watchlist
Comment 4
2022-02-18 07:28:58 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Antoine Quint
Comment 5
2022-02-18 07:30:39 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/32903
EWS
Comment 6
2022-02-19 00:49:35 PST
Committed
r290201
(
247529@main
): <
https://commits.webkit.org/247529@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452518
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug