Source/WebCore/rendering/style/KeyframeList.h
@@ -32,7 +32,7 @@
 
 namespace WebCore {
 
-class Element;
+class KeyframeEffect;
 class RenderStyle;
 class TimingFunction;
 
@@ -100,7 +100,7 @@ public:
 
     void copyKeyframes(KeyframeList&);
     bool hasImplicitKeyframes() const;
-    void fillImplicitKeyframes(const Element&, Style::Resolver&, const RenderStyle& elementStyle, const RenderStyle* parentElementStyle);
+    void fillImplicitKeyframes(const KeyframeEffect&, const RenderStyle& elementStyle);
 
     auto begin() const { return m_keyframes.begin(); }
     auto end() const { return m_keyframes.end(); }
